def/force-app/main/default/objects/RelatedOfferings__c/RelatedOfferings__c.object-meta.xml
<CustomObject>
    <label>RelatedOfferings</label>
    <nameField>
        <label>RelatedOfferings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RelatedOfferings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>