def/force-app/main/default/objects/RelatedOfferings__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>RelatedOfferings</relationshipLabel>
    <relationshipName>RelatedOfferings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>