def/force-app/main/default/objects/RelatedOfferings__c/fields/Offeringl__c.field-meta.xml
<CustomField>
    <fullName>Offeringl__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>RelatedOfferings (Offering)</relationshipLabel>
    <relationshipName>RelatedOfferings1</relationshipName>
    <type>Lookup</type>
</CustomField>