def/force-app/main/default/objects/RelatedOfferings__c/fields/seq1__c.field-meta.xml
<CustomField>
    <fullName>seq1__c</fullName>
    <label>seq1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>