def/force-app/main/default/objects/RelatedOfferings__c/fields/seq__c.field-meta.xml
<CustomField>
    <fullName>seq__c</fullName>
    <label>seq</label>
    <type>AutoNumber</type>
</CustomField>